# eigen

./: .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  setup.sh
blas/: CMakeLists.txt
unsupported/Eigen/CXX11/: CMakeLists.txt  Tensor  TensorSymmetry  ThreadPool
unsupported/Eigen/CXX11/src/Tensor/: README.md  Tensor.h  TensorArgMax.h  TensorArgMaxSycl.h  TensorAssign.h  TensorBase.h  TensorBroadcasting.h  TensorChipping.h  TensorConcatenation.h  TensorContraction.h  TensorContractionBlocking.h  TensorContractionCuda.h  TensorContractionMapper.h  TensorContractionSycl.h  TensorContractionThreadPool.h  TensorConversion.h  TensorConvolution.h  TensorConvolutionSycl.h  TensorCostModel.h  TensorCustomOp.h  TensorDevice.h  TensorDeviceCuda.h  TensorDeviceDefault.h  TensorDeviceSycl.h  TensorDeviceThreadPool.h  TensorDimensionList.h  TensorDimensions.h  TensorEvalTo.h  TensorEvaluator.h  TensorExecutor.h  TensorExpr.h  TensorFFT.h  TensorFixedSize.h  TensorForcedEval.h  TensorForwardDeclarations.h  TensorFunctors.h  TensorGenerator.h  TensorGlobalFunctions.h  TensorIO.h  TensorImagePatch.h  (+35 more)
unsupported/Eigen/CXX11/src/TensorSymmetry/: DynamicSymmetry.h  StaticSymmetry.h  Symmetry.h
unsupported/Eigen/CXX11/src/TensorSymmetry/util/: TemplateGroupTheory.h
unsupported/Eigen/CXX11/src/ThreadPool/: EventCount.h  NonBlockingThreadPool.h  RunQueue.h  SimpleThreadPool.h  ThreadCancel.h  ThreadEnvironment.h  ThreadLocal.h  ThreadPoolInterface.h  ThreadYield.h
unsupported/Eigen/CXX11/src/util/: CXX11Meta.h  CXX11Workarounds.h  EmulateArray.h  EmulateCXX11Meta.h
(+94 files in other folders)
